# js-benchmarking

./: Cargo.toml
benches/: js_benchmark-node.js  js_benchmark.rs  native.js
